--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -5,8 +5,6 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
-
 \textit{``Sir! The raiders are at our gates!''}
 
 \textit{``Sound the warhorn! We'll drive them back as always!'' you command, and go to defend the city. Just as you have done many times before. Such is the harsh life of the border clans, where wars and skirmishes with neighboring rivals never truly end. Fortunately, your alliance remains strong, and you know your back is covered.}
@@ -35,7 +33,7 @@ This Scenario is played over 7 Rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map Tiles and arrange them as shown in the Scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
