ranged unit -> svg

--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -85,7 +85,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 
   \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
   \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Dense Fog – All Ranged Units gain disadvantage.}\\
+    & \lightcell[1.4]{Dense Fog – All \svg{unit_ranged-table} Units gain disadvantage.}\\
   \darkcell[1.4]{-1/0}
     & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
   \darkcell[1.4]{-1/+1}
