--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -95,7 +95,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
   \darkcell[1.4]{0/0}
     & \lightcell[1.4]{Clear Skies – No effect.}\\
   \darkcell[1.4]{0/+1}
-    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
+    & \lightcell[1.4]{Rocky Terrain – All \svg{unit_ground-table} Units gain \svg{defense_yellow} Token.}\\
   \darkcell[1.8]{+1/-1}
     & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
   \darkcell[1.4]{+1/0}
