--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -85,17 +85,17 @@ When any player first flags ``The Hill'', each player, including the one who fla
 
   \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
   \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Dense Fog – All Ranged Units gain disadvantage.}\\
+    & \lightcell[1.4]{Dense Fog – All \svg{unit_ranged-table} Units gain disadvantage.}\\
   \darkcell[1.4]{-1/0}
     & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
   \darkcell[1.4]{-1/+1}
-    & \lightcell[1.4]{Scorching Earth – All \silver\ and \golden Units start Combat with 1 \svg{damage-table}.}\\
+    & \lightcell[1.4]{Scorching Earth – All \silver\ and \golden\ Units start Combat with 1 \svg{damage-table}.}\\
   \darkcell[1.4]{0/-1}
     & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
   \darkcell[1.4]{0/0}
     & \lightcell[1.4]{Clear Skies – No effect.}\\
   \darkcell[1.4]{0/+1}
-    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
+    & \lightcell[1.4]{Rocky Terrain – All \svg{unit_ground-table} Units gain \svg{defense_yellow} Token.}\\
   \darkcell[1.8]{+1/-1}
     & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
   \darkcell[1.4]{+1/0}
@@ -104,9 +104,10 @@ When any player first flags ``The Hill'', each player, including the one who fla
     & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
   \end{tabularx}
 }
+
 \begin{itemize}
   \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you defeated.
-  \item At the start of the next turn, a defeated main Hero may Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
+  \item When a Main Hero is defeated, at the start of that player's next turn, they may Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
