Move scenarios to the mission book

--- a/structure.tex
+++ b/structure.tex
@@ -51,6 +51,8 @@
 
 \include{clash/main.tex}
 
+\include{\sections/random_scenario.tex}
+
 \include{campaigns/main.tex}
 
 \include{\sections/recommendations.tex}
