--- a/translations/title_page.tex/de.po
+++ b/translations/title_page.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: 2025-03-26 09:51+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -45,6 +45,6 @@ msgid ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
-"defense_yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
