--- a/translations/bloody_grail.tex/de.po
+++ b/translations/bloody_grail.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: 2025-04-01 12:55+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -80,8 +80,8 @@ msgstr ""
 #. type: Plain text
 #: clash/bloody_grail.tex:3
 msgid ""
-"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-"
-"grail.png}"
+"\\addscenariosection{1}{Clash Scenario}{Bloody Grail}{\\images/bloody-grail."
+"png}"
 msgstr ""
 
 #. type: multicols*
