--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -545,18 +545,18 @@ msgid ""
 "5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
 "6\\silver 6\\golden 4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver "
 "6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden "
-"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}"
-"\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-"4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
-"\\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
+"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden "
+"5\\azure}\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze "
+"8\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
+"5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
+"3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} "
+"& \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
 "Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]"
 "{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak Then\\linebreak "
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Síla Armád Pevnosti Titánů}"
-"\\\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Síla Armád Pevnosti "
+"Titánů}\\\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
@@ -574,16 +574,16 @@ msgstr ""
 "{6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze "
 "3\\silver 4\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 4\\silver "
 "3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
-"3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}"
-"\\\\ \\darkcell[1.8]{4 Hráči} & \\lightcell[1.8]{10\\bronze 10\\silver "
-"\\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
-"6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden "
-"3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} "
-"& \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-"Poté\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]"
-"{5 Hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure "
-"\\linebreak Poté\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & "
-"\\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
+"3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden "
+"3\\azure}\\\\ \\darkcell[1.8]{4 Hráči} & \\lightcell[1.8]{10\\bronze "
+"10\\silver \\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
+"10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
+"5\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure "
+"\\linebreak Poté\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{5 Hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
+"1\\azure \\linebreak Poté\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} "
+"& \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
 "Poté\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
 "{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Poté\\linebreak "
 "3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
