--- a/translations/title_page.tex/title_page.tex.pot
+++ b/translations/title_page.tex/title_page.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-22 00:57+0200\n"
+"POT-Creation-Date: 2025-06-21 22:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -45,6 +45,6 @@ msgid ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
-"defense_yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
+"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/defense_yellow."
+"svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
 msgstr ""
