--- a/translations/emerald_island.tex/fr.po
+++ b/translations/emerald_island.tex/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-06-22 00:57+0200\n"
-"PO-Revision-Date: 2025-06-23 08:32+0200\n"
+"PO-Revision-Date: 2025-06-23 09:15+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -204,7 +204,7 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Emerald Island}{\\images/"
 "logistics.png}"
 msgstr ""
-"\\addscenariosection{1}{Scenario Coopératif}{Le Ile d'Émeraude}{\\images/"
+"\\addscenariosection{1}{Scenario Coopératif}{L'Ile d'Émeraude}{\\images/"
 "logistics.png}"
 
 #. type: multicols
@@ -283,7 +283,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\ \\n\n"
 "\n"
 
 #. type: multicols
