--- a/translations/stand_united.tex/fr.po
+++ b/translations/stand_united.tex/fr.po
@@ -398,12 +398,12 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Retirez chaque Dragon Azure du Deck d'Unités Neutres \\azure\\ et en mettre un de côté pour plus tard.\n"
+"  \\item Retirez les Dragons Azures du Deck d'Unités Neutres \\azure\\ et en mettre un de côté pour plus tard.\n"
 "  \\item Les Joueurs ne peuvent pas Recruter de Héros Secondaires.\n"
-"  \\item Les Combats Niveaux VII ne peuvent être évités par Diplomatie ou d'autres moyens.\n"
+"  \\item Le Combat Niveaux VII ne peut être évité par Diplomatie ou d'autres moyens.\n"
 "  \\item Un Joueur peut utiliser son Jeton Construction pour échanger avec un autre Joueur. Les deux Joueurs échangent librement des Ressources, ainsi que des Sorts et Artefacts comme si leurs Héros étaient adjacents.\n"
 "  \\item Les Joueurs vont créer une armée partagée. Chaque Joueur peut jouer les Unités de l'armée partagée pendant les Combats (les capacités \\svg{map} des Unités partagées ne peuvent être activées à chaque Manche que par un Joueur).  % no-check-caps\n"
-"  \\item Lors de la Visite d'un Obélisque, défaussez la 1$^{ère}$ Carte de chaque Deck d'Unités Neutres sauf \\azure\\. Vous pouvez Recruter une Unité. Les Unités ainsi Recrutées vont dans l'armée partagée.\n"
+"  \\item Lors de la Visite d'un Obélisque, défaussez la 1$^{ère}$ Carte des Decks d'Unités Neutres sauf \\azure\\. Vous pouvez Recruter une de ces Unités. Les Unités ainsi Recrutées vont dans l'armée partagée.\n"
 "  \\item Lors du Combat dans les Terres Désolées, un des Unités \\azure\\ est toujours le Dragon Azure et l'Armée Neutre utilise le Deck IA. Remélangez le Deck IA et Sorts IA à la fin du Combat.\n"
 "  \\item Après victoire aux Terres Désolées, aucun Cube de Faction n'est placé sur la case. Le Joueur victorieux place une Unité de Faction survivante dans l'armée partagée et peut redistribuer ses Ressources restantes entre les autres Joueurs, puis ce Joueur est retiré du jeu.\n"
 "\\end{itemize}\n"
