--- a/translations/stand_united.tex/fr.po
+++ b/translations/stand_united.tex/fr.po
@@ -366,7 +366,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{évènements programés}}\n"
+"\\subsection*{\\MakeUppercase{évènements programmés}}\n"
 "\\textbf{Manche 4:}\n"
 "\\begin{itemize}\n"
 "  \\item Lancez un \\svg{resource} et résoudre le résultat.\n"
