--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -405,7 +405,7 @@ msgstr ""
 "      \\item \\textbf{[1er Obélisque]} Vous gagnez un Héros Secondaire. Placez sa figurine sur cette Case. Si vous l'avez déjà, gagnez 6 \\svg{gold} à la place. Puis choisissez un Joueur ennemi qui défausse une carte au hasard de sa main.\n"
 "      \\item \\textbf{[2e Obélisque]} Augmentez vos revenus \\svg{gold}, \\svg{building_materials}, ou \\svg{valuables} d'un niveau.\n"
 "      \\item \\textbf{[3e Obélisque]} Lancez 2 \\svg{treasure} et en résoudre 1; puis, gagnez \\svg{morale_positive} et \\svgeven{movement}.\n"
-"      \\item \\textbf{[4e Obélisque]} Retirez jusque 4 Cartes de votre main, sauf Carte Statistique; puis, fouillez chaque deck correspondant pour une carte de votre choix et la mettre dans votre main.\n"
+"      \\item \\textbf{[4e Obélisque]} Retirez jusque 4 Cartes de votre main, sauf Carte Statistique; puis, fouillez chaque deck correspondant pour une carte de votre choix.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité en échange de:\n"
 "    \\begin{enumerate}\n"
