--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -310,7 +310,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manches 6, 9, 12 :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques sur le plateau.\n"
+"  \\item Retirez tous les cubes noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques.\n"
 "  \\item Chaque Joueur ayant le titre «\\textcolor{cobalt}{Chevalier du Graal}» gagne \\svg{morale_positive}.\n"
 "  \\item Tout Joueur sans titre gagne 2 \\svg{morale_negative}.\n"
 "\\end{itemize}\n"
