--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -310,7 +310,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manches 6, 9, 12 :}\n"
 "\\begin{itemize}\n"
-"  \\item Retirez tous les cubes noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques.\n"
+"  \\item Retirez tous les cubes noirs des Moulins à Eau, Moulins à Vent et Jardins Mystiques sur le plateau.\n"
 "  \\item Chaque Joueur ayant le titre «\\textcolor{cobalt}{Chevalier du Graal}» gagne \\svg{morale_positive}.\n"
 "  \\item Tout Joueur sans titre gagne 2 \\svg{morale_negative}.\n"
 "\\end{itemize}\n"
@@ -407,11 +407,11 @@ msgstr ""
 "      \\item \\textbf{[3e Obélisque]} Lancez 2 \\svg{treasure} et en résoudre 1; puis, gagnez \\svg{morale_positive} et \\svgeven{movement}.\n"
 "      \\item \\textbf{[4e Obélisque]} Retirez jusque 4 Cartes de votre main, sauf Carte Statistique; puis, fouillez chaque deck correspondant pour une carte de votre choix.\n"
 "    \\end{enumerate}\n"
-"    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité en échange de:\n"
+"    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité pour:\n"
 "    \\begin{enumerate}\n"
-"      \\item *\\bronze\\:  6 \\svg{gold}, 3 \\svg{building_materials}, 6 et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
-"      \\item *\\silver\\: 12 \\svg{gold}, 6 \\svg{building_materials}, et 2 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (3)} le Deck Artefact Majeur.\n"
-"      \\item *\\golden\\: 18 \\svg{gold}, 9 \\svg{building_materials}, et 3 \\svg{valuables}. De plus, \\textbf{Fouillez (2)} le Deck Relique. Enfin, si l'Unité est sur la face Groupe, \\textbf{Fouillez (2)} le Deck d'Unité \\azure\\; vous pouvez en recruter une pour la moitié du coût (arrondi à l'inférieur).\n"
+"      \\item Gagner *\\bronze\\:  6 \\svg{gold}, 3 \\svg{building_materials}, 6 et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
+"      \\item Gagner *\\silver\\: 12 \\svg{gold}, 6 \\svg{building_materials}, et 2 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (3)} le Deck Artefact Majeur.\n"
+"      \\item Gagner *\\golden\\: 18 \\svg{gold}, 9 \\svg{building_materials}, et 3 \\svg{valuables}. De plus, \\textbf{Fouillez (2)} le Deck Relique. Enfin, si l'Unité est sur la face Groupe, \\textbf{Fouillez (2)} le Deck d'Unité \\azure\\; vous pouvez en recruter une pour la moitié du coût (arrondi à l'inférieur).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item Un Joueur qui choisit \\textbf{Sacrifier} gagne le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}». Placez un Cube de Faction rouge sur le portrait du Héros pour indiquer cet effet. Un\\textcolor{darkcandyapplered}{Chevalier Sanglant} ne peut jamais \\textbf{Purifier} en visitant un Obélisque.\n"
