--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -431,6 +431,7 @@ msgstr ""
 "  \\item Si un Joueur avec le Graal se Rend, le Jeton Graal est posé sur la case du Héros qui s'est Rendu.\n"
 "  \\item Si une Armée Neutre bat le Héros avec le Graal, le Jeton est posé sur la case où le Héros a été battu.\n"
 "  \\item Si un Héros avec le Graal lance Portail de Ville ou utilise le Bâtiment de Faction Hadès, le Jeton est placé sur la case où le Sort a été lancé ou le Bâtiment utilisé.\n"
+"\\columnbreak\n"
 "  \\item Le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant quand si joué: «$\\infty$ Un fois durant un Combat, si le Héros est \\textcolor{darkcandyapplered}{Chevalier Sanglant}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage-red} d'un de vos Unités et les assigner aux Unités ennemies.»\n"
 "  \\item Un Héros avec le Graal et le titre «\\textcolor{cobalt}{Grail Knight}» peut payer 10 \\svg{gold} ou 3 \\svg{valuables} à un Temple pour purifier le Graal. Placez un Cube de Faction bleu sur le Jeton Graal pour indiquer cet effet.\n"
 "  \\item Un fois purifié, le Graal agit comme une Carte Permanente qui ne compte pas dans la limite de main et ne peut être défaussé; il donne l'effet suivant si joué: «$\\infty$ Une fois par Tour de Combat, si le Héros est \\textcolor{cobalt}{Chevalier du Graal}, défaussez une Carte pour retirer jusqu'à 2 \\svg{damage-red} de vos Unités.»\n"
