--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -419,6 +419,7 @@ msgstr ""
 "  \\item Quand un Joueur choisit \\textbf{Sacrifier}, placez un nombre de Cube de Faction sur l'Unité sacrifiée et sur l'Obélisque égal au nombre de fois où le Joueur à choisit de \\textbf{Sacrifier}. Par exemple, si le Joueur sacrifie pour la 2e fois, placez 2 Cubes de Faction sur la Carte d'Unité et 2 sur l'Obélisque.\n"
 "  \\item Un Joueur qui possède le titre «\\textcolor{cobalt}{Chevalier du Graal}» peut, après la visite d'un Obélisque, Recruter une Unité ennemie sacrifiée à cet Obélisque pour la moitié du coût (arrondi à l'inférieur); si un Groupe est sacrifié, le joueur peut choisir de recruter Quelques à la place.\n"
 "  \\item Si une Unité Recrutée à un Obélisque est battu, retirez-la du jeu.\n"
+"\\columnbreak\n"
 "  \\item Un Joueur sans titre ou avec le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}» ne peut pas utiliser la Carte Diplomatie. Si un Joueur sans titre ou avec le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}» pioche Diplomatie, il peut la révéler, la défausser et pioche une autre Compétence à la place.\n"
 "  \\item Un Joueur avec le titre «\\textcolor{cobalt}{Chevalier du Graal}» ne peut pas utiliser Diplomatie pour Recruter une Unité Neutre \\azure\\.\n"
 "  \\item Quand une Proclamation des Astrologues ou une Carte Événement qui permet de Recruter une Unité Neutre est piochée, ignorez-la et pioches en une nouvelle.\n"
