fix failed check

--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -231,7 +231,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{For a 4-player Scenario:}\n"
+"\\textbf{Pour 4 joueurs:}\n"
 "\\begin{itemize}\n"
 "  \\item 4 × Tuiles de Départ (I)\n"
 "  \\item 6 × Tuiles Proches (IV--V), toutes avec un Obélisque\n"
