--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -118,7 +118,7 @@ msgid ""
 "\\textit{A lady clad in dark robes visits you in your dreams, offering you a golden chalice filled with blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}\n"
 "\n"
 msgstr ""
-"\\textit{Une Dame de noir vêtue vous rend visite en rêve, vous offrant un calice d'or remplie d'un vin rouge sang. Après un réveil en sueur, vous décidez de vous embarquer dans la quête de cette artefact impie.}\n"
+"\\textit{Une Dame de noir vêtue vous rend visite en rêve, vous offrant un calice d'or rempli d'un vin rouge sang. Après un réveil en sueur, vous décidez de vous embarquer dans la quête de cet artefact impie.}\n"
 "\n"
 
 #. type: multicols*
@@ -235,7 +235,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item 4 × Tuiles de Départ (I)\n"
 "  \\item 6 × Tuiles Proches (IV--V), toutes avec un Obélisque\n"
-"  \\item 8 × Tuiles Lointaines (II--III), dont 2 avec une Enclave\n"
+"  \\item 8 × Tuiles Lointaines (II--III), dont 4 avec une Enclave\n"
 "  \\item 1 × Tuiles Centres (VI--VII), avec une case Graal\n"
 "\\end{itemize}\n"
 "\n"
@@ -409,7 +409,7 @@ msgstr ""
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité pour:\n"
 "    \\begin{enumerate}\n"
-"      \\item Gagner *\\bronze\\:  6 \\svg{gold}, 3 \\svg{building_materials}, 6 et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
+"      \\item Gagner *\\bronze\\:  6 \\svg{gold}, 3 \\svg{building_materials}, et 1 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (4)} le Deck Artefact Mineur.\n"
 "      \\item Gagner *\\silver\\: 12 \\svg{gold}, 6 \\svg{building_materials}, et 2 \\svg{valuables}. De plus, si l'Unité est sur la face Groupe, \\textbf{Fouillez (3)} le Deck Artefact Majeur.\n"
 "      \\item Gagner *\\golden\\: 18 \\svg{gold}, 9 \\svg{building_materials}, et 3 \\svg{valuables}. De plus, \\textbf{Fouillez (2)} le Deck Relique. Enfin, si l'Unité est sur la face Groupe, \\textbf{Fouillez (2)} le Deck d'Unité \\azure\\; vous pouvez en recruter une pour la moitié du coût (arrondi à l'inférieur).\n"
 "    \\end{enumerate}\n"
