--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -192,7 +192,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"\\subsection*{\\MakeUppercase{Préparation du Plateau}}\n"
 "Prenez les Tuiles suivantes et placez-les comme indiqué dans les images de la Préparation du Plateau:\n"
 "\n"
 
@@ -209,7 +209,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Pour 2 Joueurs:}\n"
+"\\textbf{Scénario pour 2 Joueurs:}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Tuiles de Départ (I)\n"
 "  \\item 4 × Tuiles Proches (IV--V), toutes avec un Obélisque\n"
@@ -231,10 +231,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Pour 4 joueurs:}\n"
+"\\textbf{Scénario pour 4 joueurs:}\n"
 "\\begin{itemize}\n"
 "  \\item 4 × Tuiles de Départ (I)\n"
-"  \\item 6 × Tuiles Proches (IV--V), toutes avec un Obélisque\n"
+"  \\item 6 × Tuiles Proches (IV--V), dont 4 avec un Obélisque\n"
 "  \\item 8 × Tuiles Lointaines (II--III), dont 4 avec une Enclave\n"
 "  \\item 1 × Tuiles Centres (VI--VII), avec une case Graal\n"
 "\\end{itemize}\n"
